maquette 2 en cours

--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -47,28 +47,21 @@
 
     <main>
       <section class="category-section">
-        <div class="category-container-left">
-          <div class="category-img-container">
-            <img src="Images/img-soupes.jpg" alt="soupe" />
-          </div>
+        <div class="category-img-container-left">
           <div class="category-text">
-            <span>Soupe</span>
+            <span>Soupes</span>
           </div>
         </div>
-        <div class="category-container-middle">
-          <div class="category-img-container">
-            <img src="Images/img-salades.jpg" alt="salade" />
-          </div>
+
+        <div class="category-img-container-middle">
           <div class="category-text">
-            <span>Salade</span>
+            <span>Salades</span>
           </div>
         </div>
-        <div class="category-container-right">
-          <div class="category-img-container">
-            <img src="Images/img-desserts.jpg" alt="dessert" />
-          </div>
+
+        <div class="category-img-container-right">
           <div class="category-text">
-            <span>Dessert</span>
+            <span>Desserts</span>
           </div>
         </div>
       </section>
@@ -95,69 +88,58 @@
               <h1>Chicken tacos</h1>
               <h2>Par John Doe - 17 mars 2025</h2>
               <p>
-                Lorem ipsum dolor sit amet,
-                <br />
-                consectetue adipiscing elit.
-                <br />
-                Aliquam sodales lobortis
-                <br />
-                qua
+                Lorem ipsum dolor sit amet, consectetue adipiscing elit. Aliquam
+                sodales lobortis qua
               </p>
               <button>Lire plus</button>
             </div>
           </div>
 
           <div class="double-recipe-card">
-            <div class="recipe-card-image">
-              <img src="Images/cote-de-boeuf.jpg" alt="boeuf" />
-            </div>
-            <div class="recipe-card-content">
-              <div class="recipe-card-badge">
-                <img
-                  class="badge-image"
-                  src="Images/toque-badge.png"
-                  alt="badge"
-                />
+            <div class="recipe-card">
+              <div class="recipe-card-image">
+                <img src="Images/cote-de-boeuf.jpg" alt="boeuf" />
               </div>
-              <h2 class="subtitle">Recette</h2>
-              <h1>Côte de boeuf</h1>
-              <h2>Par John Doe - 17 mars 2025</h2>
-              <p>
-                Lorem ipsum dolor sit amet,
-                <br />
-                consectetue adipiscing elit.
-                <br />
-                Aliquam sodales lobortis
-                <br />
-                qua
-              </p>
-              <button>Lire plus</button>
+              <div class="recipe-card-content">
+                <div class="recipe-card-badge">
+                  <img
+                    class="badge-image"
+                    src="Images/toque-badge.png"
+                    alt="badge"
+                  />
+                </div>
+                <h2 class="subtitle">Recette</h2>
+                <h1>Côte de boeuf</h1>
+                <h2>Par John Doe - 17 mars 2025</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetue adipiscing elit.
+                  Aliquam sodales lobortis qua
+                </p>
+                <button>Lire plus</button>
+              </div>
             </div>
 
-            <div class="recipe-card-image">
-              <img src="Images/carrot-cake.jpg" alt="carrot-cake" />
-            </div>
-            <div class="recipe-card-content">
-              <div class="recipe-card-badge">
-                <img
-                  class="badge-image"
-                  src="Images/toque-badge.png"
-                  alt="badge"
-                />
+            <div class="recipe-card">
+              <div class="recipe-card-image">
+                <img src="Images/carrot-cake.jpg" alt="carrot-cake" />
               </div>
-              <h2 class="subtitle">Recette</h2>
-              <h1>Carrot cake</h1>
-              <h2>Par John Doe - 17 mars 2025</h2>
-              <p>
-                Lorem ipsum dolor sit amet,
-                <br />
-                consectetue adipiscing elit.
-                <br />
-                Aliquam sodales lobortis
-                <br />
-                qua
-              </p>
-              <button>Lire plus</button>
+              <div class="recipe-card-content">
+                <div class="recipe-card-badge">
+                  <img
+                    class="badge-image"
+                    src="Images/toque-badge.png"
+                    alt="badge"
+                  />
+                </div>
+                <h2 class="subtitle">Recette</h2>
+                <h1>Carrot cake</h1>
+                <h2>Par John Doe - 17 mars 2025</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetue adipiscing elit.
+                  Aliquam sodales lobortis qua
+                </p>
+                <button>Lire plus</button>
+              </div>
             </div>
           </div>
 
@@ -177,13 +159,8 @@
               <h1>Cookies</h1>
               <h2>Par John Doe - 17 mars 2025</h2>
               <p>
-                Lorem ipsum dolor sit amet,
-                <br />
-                consectetue adipiscing elit.
-                <br />
-                Aliquam sodales lobortis
-                <br />
-                qua
+                Lorem ipsum dolor sit amet, consectetue adipiscing elit. Aliquam
+                sodales lobortis qua
               </p>
               <button>Lire plus</button>
             </div>
@@ -214,16 +191,74 @@
           <div class="section-title">
             <span>Catégories</span>
           </div>
+
           <div class="category-sidebar">
             <div class="sidebar-content">
+              <p>Alcool</p>
+              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
             </div>
-            <div class="sidebar-content"></div>
-            <div class="sidebar-content"></div>
+
+            <div class="sidebar-content">
+              <p>Jus de fruits</p>
+              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
+            </div>
+
+            <div class="sidebar-content">
+              <p>Vive le bio</p>
+              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
+            </div>
           </div>
-          <div class="feature-card"></div>
-          <div class="feature-card"></div>
+
+          <div class="feature-card-top">
+            <p>mes bières</p>
+            <p>préférées</p>
+            <button>Lire plus</button>
+          </div>
+          <div class="feature-card-down">
+            <p>l'art</p>
+            <p>du café</p>
+            <button>Lire plus</button>
+          </div>
+        </div>
+      </section>
+      <section class="gallery-section">
+        <div class="section-title">
+          <span>Ma galerie photos</span>
+        </div>
+        <div class="gallery-grid">
+          <img src="Images/burger.jpg" alt="burger" />
+          <img src="Images/gateau.jpg" alt="gateau" />
+          <img src="Images/wrap.jpg" alt="wrap" />
+          <img src="Images/pancakes.jpg" alt="pancakes" />
+          <img src="Images/oeufs.jpg" alt="oeufs" />
+          <img src="Images/saumon.jpg" alt="saumon" />
         </div>
       </section>
     </main>
+    <footer>
+      <section>
+        <div class="footer-logo">
+          <img src="Images/logo-footer.png" alt="footer-logo" />
+        </div>
+      </section>
+      <section>
+        <nav class="footer-menu">
+          <ul class="navbar-menu">
+            <li><a class="menu-link" href="#">Brunch</a></li>
+            <li><a class="menu-link" href="#">Sucré</a></li>
+            <li><a class="menu-link" href="#">Salé</a></li>
+            <li><a class="menu-link" href="#">Bio</a></li>
+            <li><a class="menu-link" href="#">Boissons</a></li>
+          </ul>
+        </nav>
+        <div class="footer-text">
+          <p>
+            « La gastronomie est l'art d'utiliser la nourriture pour créer le
+            bonheur. Il n'y a rien qui permette de condamner un gastronome, tant
+            qu'il ne va pas jusqu'à l'indigestion »
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
