--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -156,7 +156,7 @@
                 />
               </div>
               <h2 class="subtitle">Recette</h2>
-              <h1>Cookies</h1>
+              <h1>Cookies sésame</h1>
               <h2>Par John Doe - 17 mars 2025</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetue adipiscing elit. Aliquam
