media queries desktop à terminer

--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -88,15 +88,18 @@
               <h1>Chicken tacos</h1>
               <h2>Par John Doe - 17 mars 2025</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetue adipiscing elit. Aliquam
-                sodales lobortis qua
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                sodales lobortis quam, ac placerat augue tempor hendrerit. Sed
+                cursus maximus lacus non commodo. Sed aliquam felis in massa
+                tincidunt, sit amet aliquet augue vulputate. Integer aliquam
+                fermentum diam at dictum. Sed vehicula sodales augue in loborti
               </p>
               <button>Lire plus</button>
             </div>
           </div>
 
           <div class="double-recipe-card">
-            <div class="recipe-card">
+            <div class="recipe-card-secondary">
               <div class="recipe-card-image">
                 <img src="Images/cote-de-boeuf.jpg" alt="boeuf" />
               </div>
@@ -113,13 +116,13 @@
                 <h2>Par John Doe - 17 mars 2025</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetue adipiscing elit.
-                  Aliquam sodales lobortis qua
+                  Aliquam sodales lobortis quam
                 </p>
                 <button>Lire plus</button>
               </div>
             </div>
 
-            <div class="recipe-card">
+            <div class="recipe-card-secondary">
               <div class="recipe-card-image">
                 <img src="Images/carrot-cake.jpg" alt="carrot-cake" />
               </div>
@@ -136,7 +139,7 @@
                 <h2>Par John Doe - 17 mars 2025</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetue adipiscing elit.
-                  Aliquam sodales lobortis qua
+                  Aliquam sodales lobortis quam
                 </p>
                 <button>Lire plus</button>
               </div>
@@ -159,8 +162,11 @@
               <h1>Cookies sésame</h1>
               <h2>Par John Doe - 17 mars 2025</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetue adipiscing elit. Aliquam
-                sodales lobortis qua
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                sodales lobortis quam, ac placerat augue tempor hendrerit. Sed
+                cursus maximus lacus non commodo. Sed aliquam felis in massa
+                tincidunt, sit amet aliquet augue vulputate. Integer aliquam
+                fermentum diam at dictum. Sed vehicula sodales augue in loborti
               </p>
               <button>Lire plus</button>
             </div>
