--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -173,6 +173,9 @@
           </div>
         </div>
         <div class="main-right">
+          <div class="section-title">
+            <span>Catégories</span>
+          </div>
           <div class="profile-card overlay overlay-gold overlay-blur">
             <div class="profile-card-avatar z-index-element">
               <img
@@ -200,39 +203,49 @@
               <img src="Images/Icon.png" alt="icone" />
             </div>
           </div>
-          <div class="section-title">
-            <span>Catégories</span>
-          </div>
 
           <div class="category-sidebar">
             <div class="sidebar-content">
               <p>Alcool</p>
-              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
+              <img
+                class="arrow-sidebar"
+                src="Images/fa6-solid_arrow-up.png"
+                alt="icone-arrow"
+              />
             </div>
 
             <div class="sidebar-content">
               <p>Jus de fruits</p>
-              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
+              <img
+                class="arrow-sidebar"
+                src="Images/fa6-solid_arrow-up.png"
+                alt="icone-arrow"
+              />
             </div>
 
             <div class="sidebar-content">
               <p>Vive le bio</p>
-              <img src="Images/fa6-solid_arrow-up.png" alt="icone-arrow" />
+              <img
+                class="arrow-sidebar"
+                src="Images/fa6-solid_arrow-up.png"
+                alt="icone-arrow"
+              />
             </div>
           </div>
-
-          <div class="feature-card-top">
-            <div class="feature-card-content">
-              <p>mes bières</p>
-              <p class="text-style">préférées</p>
-              <button>Lire plus</button>
+          <div class="feature-content">
+            <div class="feature-card-top">
+              <div class="feature-card-content">
+                <p>mes bières</p>
+                <p class="text-style">préférées</p>
+                <button>Lire plus</button>
+              </div>
             </div>
-          </div>
-          <div class="feature-card-down">
-            <div class="feature-card-content">
-              <p>l'art</p>
-              <p class="text-style">du café</p>
-              <button>Lire plus</button>
+            <div class="feature-card-down">
+              <div class="feature-card-content">
+                <p>l'art</p>
+                <p class="text-style">du café</p>
+                <button>Lire plus</button>
+              </div>
             </div>
           </div>
         </div>
