--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -21,6 +21,12 @@
       </section>
       <section class="navbar-container">
         <nav>
+          <input id="menu-mobile" type="checkbox" />
+          <label for="menu-mobile" class="hamberger-menu-mobile">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </label>
           <ul class="navbar-menu">
             <li><a class="menu-link" href="#">Brunch</a></li>
             <li><a class="menu-link" href="#">Sucré</a></li>
