--- a/current-training/programming/maquette-2/index.html
+++ b/current-training/programming/maquette-2/index.html
@@ -22,7 +22,7 @@
       <section class="navbar-container">
         <nav>
           <input id="menu-mobile" type="checkbox" />
-          <label for="menu-mobile" class="hamberger-menu-mobile">
+          <label for="menu-mobile" class="hamburger-menu-mobile">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
