--- a/current-training/programming/javascript/projet-morpion/index.html
+++ b/current-training/programming/javascript/projet-morpion/index.html
@@ -4,33 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Script&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Projet Morpion</title>
 </head>
 
 <body>
-
-    <div class="title">
-        <h1>Jeu de Morpion</h1>
+    <h1>Jeu de Morpion</h1>
+    <div id="board">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
     </div>
-    <div class="game-grid">
-        <div class="case1"></div>
-        <div class="case2"></div>
-        <div class="case3"></div>
-        <div class="case4"></div>
-        <div class="case5"></div>
-        <div class="case6"></div>
-        <div class="case7"></div>
-        <div class="case8"></div>
-        <div class="case9"></div>
-
-
-    </div>
-
+    <div class="announce"></div>
 
     <script src="js.js"></script>
 </body>
