--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>JEU DU PENDU</title>
 </head>
 
 <body>
-    <h1>Jeu du Pendu</h1>
+    <h1>- Jeu du Pendu -</h1>
     <section class="game-board">
+
         <div class="flower">
             <div class="center"></div>
             <div class="petal"></div>
@@ -26,34 +30,38 @@
             <div class="petal"></div>
             <div class="petal"></div>
         </div>
-        <div class="word"></div>
+        <div class="word-container">
+            <div class="word">_ _ _ _ _</div>
+        </div>
         <div class="keyboard">
-            <div class="letter">A</div>
-            <div class="letter">B</div>
-            <div class="letter">C</div>
-            <div class="letter">D</div>
-            <div class="letter">E</div>
-            <div class="letter">F</div>
-            <div class="letter">G</div>
-            <div class="letter">H</div>
-            <div class="letter">I</div>
-            <div class="letter">J</div>
-            <div class="letter">K</div>
-            <div class="letter">L</div>
-            <div class="letter">M</div>
-            <div class="letter">N</div>
-            <div class="letter">O</div>
-            <div class="letter">P</div>
-            <div class="letter">Q</div>
-            <div class="letter">R</div>
-            <div class="letter">S</div>
-            <div class="letter">T</div>
-            <div class="letter">U</div>
-            <div class="letter">V</div>
-            <div class="letter">W</div>
-            <div class="letter">X</div>
-            <div class="letter">Y</div>
-            <div class="letter">Z</div>
+            <div class="alphabet">
+                <div class="letter">A</div>
+                <div class="letter">B</div>
+                <div class="letter">C</div>
+                <div class="letter">D</div>
+                <div class="letter">E</div>
+                <div class="letter">F</div>
+                <div class="letter">G</div>
+                <div class="letter">H</div>
+                <div class="letter">I</div>
+                <div class="letter">J</div>
+                <div class="letter">K</div>
+                <div class="letter">L</div>
+                <div class="letter">M</div>
+                <div class="letter">N</div>
+                <div class="letter">O</div>
+                <div class="letter">P</div>
+                <div class="letter">Q</div>
+                <div class="letter">R</div>
+                <div class="letter">S</div>
+                <div class="letter">T</div>
+                <div class="letter">U</div>
+                <div class="letter">V</div>
+                <div class="letter">W</div>
+                <div class="letter">X</div>
+                <div class="letter">Y</div>
+                <div class="letter">Z</div>
+            </div>
         </div>
     </section>
 
