--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -31,7 +31,7 @@
             <div class="petal"></div>
         </div>
         <div class="word-container">
-            <div class="word">_ _ _ _ _</div>
+            <div class="word">gvbirgbv</div>
         </div>
         <div class="keyboard">
             <div class="alphabet">
