ajout pendu en cours

--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -31,7 +31,7 @@
             <div class="petal"></div>
         </div>
         <div class="word-container">
-            <div class="word">gvbirgbv</div>
+            <div id="word"></div>
         </div>
         <div class="keyboard">
             <div class="alphabet">
@@ -64,6 +64,7 @@
             </div>
         </div>
     </section>
+    <button id="new-game">Génère un nouveau mot</button>
 
     <script src="js.js"></script>
 </body>
