--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>JEU DU PENDU</title>
 </head>
 
 <body>
-    <h1>- Jeu du Pendu -</h1>
+    <h1>- Jeu du Pendu Botanique -</h1>
     <section class="game-board">
 
         <div class="flower">
@@ -64,7 +64,7 @@
             </div>
         </div>
     </section>
-    <button id="new-game">Génère un nouveau mot</button>
+    <button id="new-game">Nouveau mot</button>
 
     <script src="js.js"></script>
 </body>
