ajout pendu presque fini

--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -31,6 +31,9 @@
             <div class="petal"></div>
         </div>
         <div class="word-container">
+            <div class="indice">
+                <span>Indice : medieval fantasy - magie :</span>
+            </div>
             <div id="word"></div>
         </div>
         <div class="keyboard">
@@ -65,7 +68,6 @@
         </div>
     </section>
     <button id="new-game">Nouveau mot</button>
-
     <script src="js.js"></script>
 </body>
 
