--- a/current-training/programming/javascript/projet-pendu/index.html
+++ b/current-training/programming/javascript/projet-pendu/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>- Jeu du Pendu Botanique -</h1>
+    <h1>- Jeu des Pétales Tombants -</h1>
     <section class="game-board">
 
         <div class="flower">
